MDEV-36005 Server crashes when checking/updating a table having vector key after enabling innodb_force_primary_key

if creating a hlindex table failed, it should not unlock
main table's plugin